# Wick

./: .gitignore  .vscodeignore  CHANGELOG.md  MANIFEST.in  PLAN.MD  README-WEB.md  README.md  esbuild.js  package-lock.json  package.json  pyproject.toml  wick-0.0.2.vsix
.github/prompts/: plan-wickWebMigration.prompt.md
.github/workflows/: test.yml
backend/: .env.example  README.md  backtest_runner.py  live_trader.py  main.py  requirements.txt  trade_journal.db  trade_journal.py
frontend/: package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: BacktestResults.tsx  LiveDashboard.tsx  NodePalette.tsx  StrategyBuilder.tsx  WickChart.tsx
frontend/src/components/nodes/: CustomNodes.tsx
frontend/src/contexts/: InfoPanelContext.tsx
frontend/src/store/: strategyStore.ts
frontend/src/types/: nodes.ts
frontend/src/utils/: api.ts  codeGenerator.ts
python/: README.md  backtest_runner.py  example_deployment.json  live_trader.py  public_api_client.py  requirements.txt  trade_journal.py
src/: extension.ts
src/test/: README.md  chart.test.ts  extension.test.ts  manual-chart-test.ts  sidebar.test.ts
src/views/: chart.html  sidebar.html  strategy-builder.html
src/wick/: __init__.py  backtest_runner.py  cli.py  live_trader.py  server.py  trade_journal.py
